--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,7 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginTop="30dp"
         android:text="or"
         android:textColor="@color/black"
         android:textSize="@dimen/sp_20"
